release v6.0.1