@@ -5,13 +5,14 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import uk.gov.pmrv.api.common.domain.enumeration.AccountType;
-import uk.gov.pmrv.api.competentauthority.CompetentAuthorityEnum;
-import uk.gov.pmrv.api.common.exception.BusinessException;
-import uk.gov.pmrv.api.notification.mail.config.property.NotificationProperties;
-import uk.gov.pmrv.api.notification.mail.domain.Email;
-import uk.gov.pmrv.api.notification.mail.domain.EmailData;
-import uk.gov.pmrv.api.notification.mail.domain.EmailNotificationTemplateData;
+import uk.gov.netz.api.common.exception.BusinessException;
+import uk.gov.netz.api.competentauthority.CompetentAuthorityEnum;
+import uk.gov.netz.api.notificationapi.mail.config.property.NotificationProperties;
+import uk.gov.netz.api.notificationapi.mail.domain.Email;
+import uk.gov.netz.api.notificationapi.mail.domain.EmailData;
+import uk.gov.netz.api.notificationapi.mail.domain.EmailNotificationTemplateData;
+import uk.gov.netz.api.notificationapi.mail.domain.EmailRecipients;
+import uk.gov.netz.api.notificationapi.mail.service.SendEmailService;
 import uk.gov.pmrv.api.notification.template.domain.NotificationContent;
 import uk.gov.pmrv.api.notification.template.service.NotificationTemplateProcessService;
 
@@ -29,7 +30,6 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
-import static uk.gov.pmrv.api.notification.template.domain.enumeration.NotificationTemplateName.EMAIL_CONFIRMATION;
 
 @ExtendWith(MockitoExtension.class)
 class NotificationEmailServiceImplTest {
@@ -61,21 +61,24 @@ class NotificationEmailServiceImplTest {
         when(notificationTemplateProcessService.processEmailNotificationTemplate(
                 emailData.getNotificationTemplateData().getTemplateName(),
                 emailData.getNotificationTemplateData().getCompetentAuthority(),
-                emailData.getNotificationTemplateData().getAccountType(),
+                null,
                 emailData.getNotificationTemplateData().getTemplateParams()))
-            .thenReturn(emailNotificationContent);
-        
+                .thenReturn(emailNotificationContent);
+
         when(notificationProperties.getEmail()).thenReturn(notificationEmail);
         when(notificationEmail.getAutoSender()).thenReturn(sendFrom);
 
         service.notifyRecipient(emailData, recipientEmail);
 
         Thread.sleep(100);
-        
+
         Email expectedEmail = Email.builder()
-                .sendFrom(sendFrom)
-                .sendTo(List.of(recipientEmail))
-                .sendCc(Collections.emptyList())
+                .from(sendFrom)
+                .recipients(EmailRecipients.builder()
+                        .to(List.of(recipientEmail))
+                        .cc(Collections.emptyList())
+                        .bcc(Collections.emptyList())
+                        .build())
                 .subject(emailNotificationContent.getSubject())
                 .text(emailNotificationContent.getText())
                 .attachments(emailData.getAttachments())
@@ -83,14 +86,58 @@ class NotificationEmailServiceImplTest {
         verify(sendEmailService, times(1)).sendMail(expectedEmail);
         verify(notificationTemplateProcessService, times(1)).processEmailNotificationTemplate(emailData.getNotificationTemplateData().getTemplateName(),
                 emailData.getNotificationTemplateData().getCompetentAuthority(),
-                emailData.getNotificationTemplateData().getAccountType(),
+                null,
                 emailData.getNotificationTemplateData().getTemplateParams());
         verify(notificationProperties, times(1)).getEmail();
         verify(notificationEmail, times(1)).getAutoSender();
     }
-    
+
     @Test
     void notifyRecipients() throws InterruptedException, IOException {
+        EmailData emailData = buildEmailData();
+        String recipientEmail = "recipient@email";
+        NotificationContent emailNotificationContent = NotificationContent.builder()
+                .subject("subject")
+                .text("text")
+                .build();
+        NotificationProperties.Email notificationEmail = mock(NotificationProperties.Email.class);
+
+        when(notificationTemplateProcessService.processEmailNotificationTemplate(
+                emailData.getNotificationTemplateData().getTemplateName(),
+                emailData.getNotificationTemplateData().getCompetentAuthority(),
+                null,
+                emailData.getNotificationTemplateData().getTemplateParams()))
+                .thenReturn(emailNotificationContent);
+
+        when(notificationProperties.getEmail()).thenReturn(notificationEmail);
+        when(notificationEmail.getAutoSender()).thenReturn(sendFrom);
+
+        service.notifyRecipients(emailData, List.of(recipientEmail));
+
+        Thread.sleep(100);
+
+        Email expectedEmail = Email.builder()
+                .from(sendFrom)
+                .recipients(EmailRecipients.builder()
+                        .to(List.of(recipientEmail))
+                        .cc(Collections.emptyList())
+                        .bcc(Collections.emptyList())
+                        .build())
+                .subject(emailNotificationContent.getSubject())
+                .text(emailNotificationContent.getText())
+                .attachments(emailData.getAttachments())
+                .build();
+        verify(sendEmailService, times(1)).sendMail(expectedEmail);
+        verify(notificationTemplateProcessService, times(1)).processEmailNotificationTemplate(emailData.getNotificationTemplateData().getTemplateName(),
+                emailData.getNotificationTemplateData().getCompetentAuthority(),
+                null,
+                emailData.getNotificationTemplateData().getTemplateParams());
+        verify(notificationProperties, times(1)).getEmail();
+        verify(notificationEmail, times(1)).getAutoSender();
+    }
+
+    @Test
+    void notifyRecipients_with_cc() throws InterruptedException, IOException {
         EmailData emailData = buildEmailData();
         String recipientEmail = "recipient@email";
         List<String> ccRecipients = List.of("cc1RecEmail@email", "cc2RecEmail@email");
@@ -103,21 +150,24 @@ class NotificationEmailServiceImplTest {
         when(notificationTemplateProcessService.processEmailNotificationTemplate(
                 emailData.getNotificationTemplateData().getTemplateName(),
                 emailData.getNotificationTemplateData().getCompetentAuthority(),
-                emailData.getNotificationTemplateData().getAccountType(),
+                null,
                 emailData.getNotificationTemplateData().getTemplateParams()))
-            .thenReturn(emailNotificationContent);
-        
+                .thenReturn(emailNotificationContent);
+
         when(notificationProperties.getEmail()).thenReturn(notificationEmail);
         when(notificationEmail.getAutoSender()).thenReturn(sendFrom);
 
         service.notifyRecipients(emailData, List.of(recipientEmail), ccRecipients);
 
         Thread.sleep(100);
-        
+
         Email expectedEmail = Email.builder()
-                .sendFrom(sendFrom)
-                .sendTo(List.of(recipientEmail))
-                .sendCc(ccRecipients)
+                .from(sendFrom)
+                .recipients(EmailRecipients.builder()
+                        .to(List.of(recipientEmail))
+                        .cc(ccRecipients)
+                        .bcc(Collections.emptyList())
+                        .build())
                 .subject(emailNotificationContent.getSubject())
                 .text(emailNotificationContent.getText())
                 .attachments(emailData.getAttachments())
@@ -125,45 +175,89 @@ class NotificationEmailServiceImplTest {
         verify(sendEmailService, times(1)).sendMail(expectedEmail);
         verify(notificationTemplateProcessService, times(1)).processEmailNotificationTemplate(emailData.getNotificationTemplateData().getTemplateName(),
                 emailData.getNotificationTemplateData().getCompetentAuthority(),
-                emailData.getNotificationTemplateData().getAccountType(),
+                null,
                 emailData.getNotificationTemplateData().getTemplateParams());
         verify(notificationProperties, times(1)).getEmail();
         verify(notificationEmail, times(1)).getAutoSender();
     }
-    
+
+    @Test
+    void notifyRecipients_with_cc_and_bcc() throws InterruptedException, IOException {
+        EmailData emailData = buildEmailData();
+        String recipientEmail = "recipient@email";
+        List<String> ccRecipients = List.of("cc1RecEmail@email", "cc2RecEmail@email");
+        List<String> bccRecipients = List.of("bcc1RecEmail@email", "bcc2RecEmail@email");
+        NotificationContent emailNotificationContent = NotificationContent.builder()
+                .subject("subject")
+                .text("text")
+                .build();
+        NotificationProperties.Email notificationEmail = mock(NotificationProperties.Email.class);
+
+        when(notificationTemplateProcessService.processEmailNotificationTemplate(
+                emailData.getNotificationTemplateData().getTemplateName(),
+                emailData.getNotificationTemplateData().getCompetentAuthority(),
+                null,
+                emailData.getNotificationTemplateData().getTemplateParams()))
+                .thenReturn(emailNotificationContent);
+
+        when(notificationProperties.getEmail()).thenReturn(notificationEmail);
+        when(notificationEmail.getAutoSender()).thenReturn(sendFrom);
+
+        service.notifyRecipients(emailData, List.of(recipientEmail), ccRecipients, bccRecipients);
+
+        Thread.sleep(100);
+
+        Email expectedEmail = Email.builder()
+                .from(sendFrom)
+                .recipients(EmailRecipients.builder()
+                        .to(List.of(recipientEmail))
+                        .cc(ccRecipients)
+                        .bcc(bccRecipients)
+                        .build())
+                .subject(emailNotificationContent.getSubject())
+                .text(emailNotificationContent.getText())
+                .attachments(emailData.getAttachments())
+                .build();
+        verify(sendEmailService, times(1)).sendMail(expectedEmail);
+        verify(notificationTemplateProcessService, times(1)).processEmailNotificationTemplate(emailData.getNotificationTemplateData().getTemplateName(),
+                emailData.getNotificationTemplateData().getCompetentAuthority(),
+                null,
+                emailData.getNotificationTemplateData().getTemplateParams());
+        verify(notificationProperties, times(1)).getEmail();
+        verify(notificationEmail, times(1)).getAutoSender();
+    }
+
     @Test
     void notifyRecipient_error() throws InterruptedException, IOException {
         EmailData emailData = buildEmailData();
         String recipientEmail = "recipient@email";
 
         when(notificationTemplateProcessService.processEmailNotificationTemplate(
-              emailData.getNotificationTemplateData().getTemplateName(),
-              emailData.getNotificationTemplateData().getCompetentAuthority(),
-                emailData.getNotificationTemplateData().getAccountType(),
-              emailData.getNotificationTemplateData().getTemplateParams()))
-        .thenThrow(BusinessException.class);
+                emailData.getNotificationTemplateData().getTemplateName(),
+                emailData.getNotificationTemplateData().getCompetentAuthority(),
+                null,
+                emailData.getNotificationTemplateData().getTemplateParams()))
+                .thenThrow(BusinessException.class);
 
         assertThrows(BusinessException.class, () -> service.notifyRecipient(emailData, recipientEmail));
 
         Thread.sleep(100);
-        
+
         verify(notificationTemplateProcessService, times(1)).processEmailNotificationTemplate(emailData.getNotificationTemplateData().getTemplateName(),
                 emailData.getNotificationTemplateData().getCompetentAuthority(),
-                emailData.getNotificationTemplateData().getAccountType(),
+                null,
                 emailData.getNotificationTemplateData().getTemplateParams());
         verifyNoInteractions(sendEmailService, notificationProperties);
     }
-    
+
     private EmailData buildEmailData() throws IOException {
         CompetentAuthorityEnum competentAuthority = CompetentAuthorityEnum.ENGLAND;
-        AccountType accountType = AccountType.INSTALLATION;
         Path sampleFilePath = Paths.get("src", "test", "resources", "files", "sample.pdf");
         byte[] att1fileContent = Files.readAllBytes(sampleFilePath);
         return EmailData.builder()
                 .notificationTemplateData(EmailNotificationTemplateData.builder()
-                        .templateName(EMAIL_CONFIRMATION)    
+                        .templateName("someTemplate")
                         .competentAuthority(competentAuthority)
-                        .accountType(accountType)
                         .templateParams(Map.of("templateParam1", "templateParam1Val"))
                         .build())
                 .attachments(Map.of("att1", att1fileContent))
